--- a/pages/register.html
+++ b/pages/register.html
@@ -10,20 +10,6 @@
 </head>
 <body class="auth-page">
 
-<header class="site-header home-header">
-  <div class="home-header-inner">
-    <div class="home-logo-area">
-      <a href="../index.html" class="logo-link">
-        <span class="logo-main">Comic<span class="logo-accent">Show</span></span>
-      </a>
-      <span class="home-tagline">Crea y comparte tus cómics</span>
-    </div>
-    <div class="home-user-area">
-      <a href="login.html" class="home-user-link" style="font-size:.8rem;font-weight:700">Entrar</a>
-      <button class="home-dots-btn" title="Más opciones">⋮</button>
-    </div>
-  </div>
-</header>
 
 <main class="auth-main">
   <div class="auth-card">
@@ -64,6 +50,8 @@
 
 <div class="toast" id="toast"></div>
 <script src="../js/i18n.js"></script>
+<script src="../js/auth.js"></script>
+<script src="../js/header.js"></script>
 <script src="../js/auth.js"></script>
 <script src="../js/auth-pages.js"></script>
 </body>
