--- a/pages/register.html
+++ b/pages/register.html
@@ -51,8 +51,8 @@
 <div class="toast" id="toast"></div>
 <script src="../js/i18n.js"></script>
 <script src="../js/auth.js"></script>
+<script src="../js/storage.js"></script>
 <script src="../js/header.js"></script>
-<script src="../js/auth.js"></script>
 <script src="../js/auth-pages.js"></script>
 </body>
 </html>
