--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 
 <!-- ══ FILTROS ══ -->
 <nav class="home-filters">
-  <button class="home-filter active" data-filter="all" data-i18n="homePublished">Publicaciones</button>
+  <button class="home-filter active" data-filter="all" data-i18n="filterAll">Publicaciones</button>
   <span class="home-filter-sep"></span>
-  <button class="home-filter" data-filter="recent" data-i18n="homeLatest">Últimos</button>
+  <button class="home-filter" data-filter="recent" data-i18n="filterRecent">Últimos</button>
   <span class="home-filter-sep"></span>
-  <button class="home-filter" data-filter="create" id="createBtn" data-i18n="homeCreate">Crear</button>
+  <button class="home-filter" data-filter="create" id="createBtn" data-i18n="filterCreate">Crear</button>
 </nav>
 
 <!-- ══ LISTA ══ -->
