Añade versionado de assets para evitar caché del navegador

--- a/pages/login.html
+++ b/pages/login.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <title>Entrar – ComicShow</title>
-  <link rel="stylesheet" href="../css/main.css">
-  <link rel="stylesheet" href="../css/auth.css">
+  <link rel="stylesheet" href="../css/main.css?v=20260221">
+  <link rel="stylesheet" href="../css/auth.css?v=20260221">
   <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Comic+Neue:wght@400;700&family=Nunito:wght@400;600;700;900&display=swap" rel="stylesheet">
 </head>
 <body class="auth-page">
@@ -42,10 +42,10 @@
 </main>
 
 <div class="toast" id="toast"></div>
-<script src="../js/i18n.js"></script>
-<script src="../js/auth.js"></script>
-<script src="../js/storage.js"></script>
-<script src="../js/header.js"></script>
-<script src="../js/auth-pages.js"></script>
+<script src="../js/i18n.js?v=20260221"></script>
+<script src="../js/auth.js?v=20260221"></script>
+<script src="../js/storage.js?v=20260221"></script>
+<script src="../js/header.js?v=20260221"></script>
+<script src="../js/auth-pages.js?v=20260221"></script>
 </body>
 </html>
