--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <title>ComicShow</title>
-  <link rel="manifest" href="manifest.json">
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="css/home.css">
+  <link rel="manifest" href="manifest.json?v=20260221">
+  <link rel="stylesheet" href="css/main.css?v=20260221">
+  <link rel="stylesheet" href="css/home.css?v=20260221">
   <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Comic+Neue:wght@400;700&family=Nunito:wght@400;600;700;900&display=swap" rel="stylesheet">
 </head>
 <body class="home-page">
@@ -35,10 +35,10 @@
 </main>
 
 <div class="toast" id="toast"></div>
-<script src="js/i18n.js"></script>
-<script src="js/auth.js"></script>
-<script src="js/storage.js"></script>
-<script src="js/header.js"></script>
-<script src="js/home.js"></script>
+<script src="js/i18n.js?v=20260221"></script>
+<script src="js/auth.js?v=20260221"></script>
+<script src="js/storage.js?v=20260221"></script>
+<script src="js/header.js?v=20260221"></script>
+<script src="js/home.js?v=20260221"></script>
 </body>
 </html>
