--- a/pages/editor.html
+++ b/pages/editor.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <title>Editor – ComicShow</title>
-  <link rel="stylesheet" href="../css/main.css">
-  <link rel="stylesheet" href="../css/editor.css">
+  <link rel="stylesheet" href="../css/main.css?v=20260221">
+  <link rel="stylesheet" href="../css/editor.css?v=20260221">
   <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Comic+Neue:wght@400;700&family=Nunito:wght@400;600;700;900&display=swap" rel="stylesheet">
 </head>
 <body class="editor-page">
@@ -124,10 +124,10 @@
 
 <input type="file" id="fileInput" accept="image/*,.gif" style="display:none" multiple>
 <div class="toast" id="toast"></div>
-<script src="../js/i18n.js"></script>
-<script src="../js/auth.js"></script>
-<script src="../js/storage.js"></script>
-<script src="../js/header.js"></script>
-<script src="../js/editor.js"></script>
+<script src="../js/i18n.js?v=20260221"></script>
+<script src="../js/auth.js?v=20260221"></script>
+<script src="../js/storage.js?v=20260221"></script>
+<script src="../js/header.js?v=20260221"></script>
+<script src="../js/editor.js?v=20260221"></script>
 </body>
 </html>
