--- a/pages/reader.html
+++ b/pages/reader.html
@@ -6,8 +6,8 @@
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <title>Leer Cómic – ComicShow</title>
-  <link rel="stylesheet" href="../css/main.css">
-  <link rel="stylesheet" href="../css/reader.css">
+  <link rel="stylesheet" href="../css/main.css?v=20260221">
+  <link rel="stylesheet" href="../css/reader.css?v=20260221">
   <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Comic+Neue:wght@400;700&family=Nunito:wght@400;600;700;900&display=swap" rel="stylesheet">
 </head>
 <body class="reader-page">
@@ -47,9 +47,9 @@
 
 <div class="toast" id="toast"></div>
 
-<script src="../js/i18n.js"></script>
-<script src="../js/auth.js"></script>
-<script src="../js/storage.js"></script>
-<script src="../js/reader.js"></script>
+<script src="../js/i18n.js?v=20260221"></script>
+<script src="../js/auth.js?v=20260221"></script>
+<script src="../js/storage.js?v=20260221"></script>
+<script src="../js/reader.js?v=20260221"></script>
 </body>
 </html>
