--- a/pages/editor.html
+++ b/pages/editor.html
@@ -12,7 +12,7 @@
 
 
 <div class="editor-toolbar" id="editorToolbar" aria-label="Herramientas del editor">
-  <div class="editor-menus" id="editorMenus" style="display:none">
+  <div class="editor-menus" id="editorMenus">
     <div class="editor-dropdown">
       <button class="editor-menu-btn" data-menu="menuVinetas">🖼 Viñetas ▾</button>
       <div class="editor-dropdown-panel" id="menuVinetas">
@@ -49,7 +49,7 @@
       </div>
     </div>
   </div>
-  <div class="editor-actions" id="editorActions" style="display:none">
+  <div class="editor-actions" id="editorActions">
     <button class="btn btn-outline editor-btn" id="saveBtn" data-i18n="save">Guardar</button>
     <button class="btn btn-primary editor-btn" id="publishBtn" data-i18n="publishComic">📖 Publicar</button>
   </div>
